# JLensVL

./: .gitignore  README.md  pyproject.toml
data/eval_sets/: association_text.jsonl  multilingual_text.jsonl  p3_prompt_variants.json  p3_task.jsonl
data/retrieval_corpus/: action_scenarios.txt  amusement_park.txt  construction_safety.txt  homework_grading.txt  mall_patrol.txt  property_mgmt_mtr.txt  steam_teaching.txt  vg_phrases_20k.txt
docs/: native_visual_lens_design.md  related_work.md  theory.md
examples/: 01_text_lens.py  02_vlm_photo.py  03_conflict.py  04_prompt_helper.py  05_mlx_forward_lens.py  06_visualize.py  07_template_aware.py  08_decision_gif.py  09_apple_silicon_check.py  09_intervention.py  10_fit_vision_lens.py  11_vision_lens_validations.py  12_full_stack.py  14_fit_vision_lens.py  15_vision_lens_validations.py  _common.py
reports/: eval_report_assoc.json  eval_report_multi.json  intervention_paris_rome.txt  p3_accuracy_bridge.json
results/vision_lens/: RESULTS.md  cross_modal_diag.json  cross_modal_fit_meta.json  cross_modal_fit_meta_answer.json  cross_modal_headline.json  fit_meta.json  metrics.json  vision_steer_dose.json  vision_swap_dose.json  vision_swap_sweep.json
scripts/: build_index_mlx.py  build_retrieval_index.py  eval_lens.py  fit_lens.py  lens_to_npz.py  p3_accuracy_bridge.py
src/jlensvl/: __init__.py  (+11 more)
tests/: README.md  conftest.py  test_cross_modal_cpu.py  test_integration.py  test_interventions.py  test_lens_math.py  test_prompt_helper.py  test_prompt_studio.py  test_retrieval_lens.py  test_tokenization.py  test_viz.py
(+6 files in other folders)
